--- a/text/prilohy.tex
+++ b/text/prilohy.tex
@@ -469,13 +469,22 @@ ann.maskrcnn.train training_dataset=/home/user/Documents/crops classes=corn,rice
 \end{flushleft}
 
 \subsection*{DESCRIPTION}
-\textstyleEmphasis{ann.maskrcnn.detect} allows the user to use a~Mask R-CNN model to
-detect features in georeferenced files and extract them either as areas or
-points. the~module creates a~separate map for each class. 
+\textstyleEmphasis{ann.maskrcnn.detect} allows the user to use a~Mask R-CNN
+model to detect features in GRASS GIS raster maps or georeferenced files and extract them either as areas or
+points. The~module creates a~separate map for each class. 
 
 \subsection*{NOTES}
-The detection may be used for multiple files. However, all files for the
-detection must be in one directory specified in the
+
+The detection may be used for raster maps imported in GRASS GIS or for external
+files (or using both). To use raster maps in GRASS GIS, you need to pass them
+in three bands following the order used during the training, e.g. if the
+training has been made on RGB images, use \textstyleEmphasis{band1=*.red</em},
+\textstyleEmphasis{band1=*.green} and \textstyleEmphasis{band3=*.blue}. To
+pass multiple images, put more maps into \textstyleEmphasis{band*} parameters,
+divided by ",".
+
+The detection may be used also for multiple external files. However, all files
+for the detection must be in one directory specified in the
 \textstyleEmphasis{images\_directory} parameter. Even when using only one
 image, the~module finds it through this parameter. 
 
@@ -486,24 +495,41 @@ trained with classes \textstyleEmphasis{corn,rice} and you use
 \textstyleEmphasis{zea,oryza}, zea areas will present areas detected as corn
 and oryza areas will present areas detected as rice. 
 
-If the~file is georeferenced externally (by a~worldfile or an
+If the~external file is georeferenced externally (by a~worldfile or an
 \textstyleEmphasis{.aux.xml} file), please use \textstyleEmphasis{{}-e} flag. 
 
 \subsection*{EXAMPLES}
 \subsubsection*{Detect buildings and lakes and import them as areas}
-In case the~georeferencing is internal (GeoTIFF): 
+
+One map imported in GRASS GIS:
 
 {\footnotesize
 \begin{lstlisting}[breaklines=true]
-ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_building_lakes_0100.h5 images_format=tif
+ann.maskrcnn.detect band1=map1.red band2=map1.green band3=map1.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5
 \end{lstlisting}
 }
 
-\ \linebreak In case the~georeferencing is external: 
+\ \linebreak Two maps (map1, map2) imported in GRASS GIS:
 
 {\footnotesize
 \begin{lstlisting}[breaklines=true]
-ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_building_lakes_0100.h5 images_format=png  -e
+ann.maskrcnn.detect band1=map1.red,map2.red band2=map1.green,map2.green band3=map1.blue,map2.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5
+\end{lstlisting}
+}
+
+\ \linebreak External files, the~georeferencing is internal (GeoTIFF): 
+
+{\footnotesize
+\begin{lstlisting}[breaklines=true]
+ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 images_format=tif
+\end{lstlisting}
+}
+
+\ \linebreak External files, the~georeferencing is external: 
+
+{\footnotesize
+\begin{lstlisting}[breaklines=true]
+ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 images_format=png  -e
 \end{lstlisting}
 }
 
@@ -511,7 +537,7 @@ ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images c
 
 {\footnotesize
 \begin{lstlisting}[breaklines=true]
-ann.maskrcnn.detect images_directory=/home/user/Documents/georeferenced_images classes=cottages,plattenbaus model=/home/user/Documents/logs/mask_rcnn_houses_0100.h5 images_format=tif output_type=point
+ann.maskrcnn.detect ann.maskrcnn.detect band1=map1.red band2=map1.green band3=map1.blue classes=buildings,lakes model=/home/user/Documents/logs/mask_rcnn_buildings_lakes_0100.h5 output_type=point
 \end{lstlisting}
 }
 
