text abstract and acknowledgment

--- a/text/1-intro.tex
+++ b/text/1-intro.tex
@@ -2,34 +2,34 @@
 \label{intro}
 
 In the last years, the field of computer science is permanently shaken by one 
-term: Artificial neural networks (\zk{ANN}s). Some people perceive it almost as 
-a magical formula. And even though \zk{ANN}s are not a spell able to solve 
-everything, they have wide applications. Their applications are in finance, data 
-mining, language recognition, computer vision and many more.
+term: Artificial neural networks (\zk{ANN}s). Some people perceive it almost
+as a magical formula. And even though \zk{ANN}s are not a spell able to solve
+everything, they have wide applications. Their applications are in finance,
+data mining, language recognition, computer vision and many more.
 
-Another term that can be heard more and more is \textit{the information age}. 
-The~availability of computers and the growth of memory limits results in huge 
+Another term that can be heard more and more is \textit{the information age}.
+The~availability of computers and the growth of memory limits results in huge
 amounts of data.
 
-The huge amount of data is a fuel for \zk{ANN}s. One hundred years ago, an 
-artificial intelligence was a phantasmagoria of science-fiction writers. Fifty 
-years ago, it was an idea facing only derision. Twenty-five years ago, a design 
-doomed to failure due to a lack of training data. Twelve years ago, a bold idea 
-of few men. Five years ago, an earthquake in each branch of the field of 
+The huge amount of data is a fuel for \zk{ANN}s. One hundred years ago, an
+artificial intelligence was a phantasmagoria of science-fiction writers. Fifty
+years ago, it was an idea facing only derision. Twenty-five years ago, a design
+doomed to failure due to a lack of training data. Twelve years ago, a bold idea
+of few men. Five years ago, an earthquake in each branch of the field of
 computer science.
 
-The data availability and their opening in the field of geomatics, as well as 
-the~computer performance open doors for the usage of \zk{ANN}s in geographic 
-information systems (\zk{GIS}). Results of a special type of \zk{ANN}s called 
-convolutional neural networks (\zk{CNN}s) promises a lot in computer vision and 
+The data availability and their opening in the field of geomatics, as well as
+the~computer performance open doors for the usage of \zk{ANN}s in geographic
+information systems (\zk{GIS}). Results of a special type of \zk{ANN}s called
+convolutional neural networks (\zk{CNN}s) promises a lot in computer vision and
 therefore also in \zk{GIS}, in tasks of detection and classification.
 
-Chapter \ref{cnn} will briefly introduce the~theory behind \zk{CNN}s. In the 
-first part, the~history and the motivation behind them will be described. The 
-second part covers multiple types of layers used in \zk{CNN}s. Few pioneering 
+Chapter \ref{cnn} will briefly introduce the~theory behind \zk{CNN}s. In the
+first part, the~history and the motivation behind them will be described. The
+second part covers multiple types of layers used in \zk{CNN}s. Few pioneering
 architectures will be covered.
 
-Chapter \ref{image-ann} will introduce the term computer vision. Various tasks 
+Chapter \ref{image-ann} will introduce the term computer vision. Various tasks
 of computer vision will be named and few breakthrough architectures not 
 mentioned in the \zk{CNN} chapter will be described there. The research which 
 concluded in the selection of Mask \zk{R-CNN} as the architecture for the 
@@ -40,7 +40,6 @@ technologies used during
 the~above-mentioned implementation.
 
 The implementation will be the topic of chapter \ref{implementation}. It will 
-summarize the motivation behind the architecture choose and code decisions, and 
-then describe the~uppermost parts of the code. The practical part of the~thesis 
+summarize the motivation behind the architecture choose and code decisions, and
+then describe the~uppermost parts of the code. The practical part of the~thesis
 is exactly this implementation.
-
