--- a/text/ondrej-pesek-dp-2018.tex
+++ b/text/ondrej-pesek-dp-2018.tex
@@ -183,14 +183,31 @@
 
 % abstrakt
 \abstrakt 
-{TODO: THIS WILL BE ABSTRACT.}
-{A TOHLE TAKY.}
+{The goal of this thesis is to develop software tools allowing the user to use
+Mask R-CNN (Mask region-based convolutional neural networks) in GRASS GIS.
+These tools allow the user to train his own Mask R-CNN model and use it to get
+vector masks from raster data. In the text of the thesis, the theory behind
+convolutional neural networks is introduced, followed by a list of their
+possible applications in the field of computer vision, a brief sketch of used
+technologies and is ended with a part dedicated to the implementation itself.
+Appendix contains a user manual and examples of usage.}
+{Cílem diplomové práce je návrh softwarových nástrojů umožňujících uživateli
+využití Mask R-CNN (Mask region-based convolutional neural networks) v
+prostředí GRASS GIS. Tyto nástroje zprostředkovávají možnost učit svůj vlastní
+Mask R-CNN model a~aplikovat jej za účelem získání vektorových masek objektů z
+rastrových dat. V textové části je nejprve nastíněn teoretický základ
+konvolučních neuronových sítí, následuje přehled možností jejich využití v
+počítačovém vidění, dále kapitoly o použitých technologiích, a~uzavírá ji část
+věnovaná implementaci samotné. Přílohy obsahují uživatelskou příručku a ukázku
+výsledků dosažených za využití vytvořených modulů.}
 
 
 % klíčová slova
 \klicovaslova
-{GIS, GRASS GIS, Python, artificial neural networks, Mask R-CNN, instance segmentation}
-{GIS, GRASS GIS, Python, umělé neuronové sítě, Mask R-CNN, instanční segmentace}
+{GIS, GRASS GIS, Python, artificial neural networks, convolutional neural
+networks,\\Mask R-CNN, instance segmentation}
+{GIS, GRASS GIS, Python, umělé neuronové sítě, konvoluční neuronové sítě,\\Mask
+R-CNN, instanční segmentace}
 
 % ========================================================================
 % Nastavení polí ve vlastnostech dokumentu PDF
@@ -241,9 +258,14 @@
 	\vspace{1em}
 		%\noindent
 	\par\hspace{2ex}
-	{TODO: \\
-	THIS IS DEDICATED TO\\
-	SOMEONE ELSE, NOT YOU.}
+	{I would like to thank my parents for their support during my studies.
+	Then I would like to thank Martin Landa, not only for supervising my thesis,
+	but also for the initial impulse in direction to artificial neural networks
+	and open source GIS generally. My thanks also belong to Margherita Di Leo for
+	long initial discussions about the usage of neural networks in the field of
+	GIS, to Moritz Lennert for testing and comments during the code sprint in
+	Bonn, and to Luca Delucchi and Fondazione Edmund Mach for the willingness to
+	exploit their time and resources to test modules.}
 }
 
 % vysázení obsahu
